# ai-email-workflow-simulator

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
config/: company_boilerplate.txt  rubric.yaml
data/eval/: baseline.json  followup_borderline.eml  followup_ready.eml  followup_vague.eml  internal_allhands.eml  internal_hr.eml  internal_rfp_prep.eml  labels.yaml  marketing_cold.eml  marketing_conference.eml  marketing_saas.eml  other_ambiguous_inquiry.eml  other_misdirected.eml  rfp_cyber_solid.eml  rfp_offmission_lowvalue.eml  rfp_short_deadline.eml  rfp_strong.eml
data/samples/: sample_followup_email.eml  sample_marketing_email.eml  sample_rfp_attachment.txt  sample_rfp_email.eml
src/ai_email_workflow_simulator/: cli.py  config.py  eval.py
src/ai_email_workflow_simulator/ingestion/: __init__.py  eml_parser.py  models.py  text_loader.py
src/ai_email_workflow_simulator/llm/: bedrock_client.py  mock_responses.py  prompts.py
src/ai_email_workflow_simulator/pipeline/: classify.py  decision.py  drafting.py  rubric.py  runner.py
src/ai_email_workflow_simulator/storage/: audit_log.py  db.py
src/ai_email_workflow_simulator/webapp/: app.py
src/ai_email_workflow_simulator/webapp/static/: style.css
src/ai_email_workflow_simulator/webapp/templates/: base.html  detail.html  queue.html
tests/: conftest.py  test_classify.py  test_decision.py  test_drafting.py  test_eval.py  test_ingestion.py  test_mock_llm.py  test_rubric.py  test_storage.py  test_webapp.py
